--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 :root {
   --primary-color: #720261;
+  --secondary-color: #feebfb;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
@@ -17,9 +18,16 @@ h1 {
 }
 
 h2 {
-  font-size: 50px;
+  font-size: 46px;
   font-family: var(--heading-font-family);
   font-weight: bold;
+}
+
+h3 {
+  font-size: 40px;
+  font-family: var(--heading-font-family);
+  font-weight: bold;
+  margin-bottom: 43px;
 }
 
 p {
@@ -31,13 +39,6 @@ p {
 
 .App-header {
   background-color: var(--primary-color);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: black;
 }
 
 .container {
@@ -55,4 +56,54 @@ img {
   padding: 12px;
   background-color: var(--primary-color);
   margin: 15px;
+}
+
+footer {
+  text-align: center;
+  margin: 60px 0 30px;
+}
+footer p {
+  font-size: 16px;
+}
+
+.social_links {
+  margin: 40px 0 0;
+}
+
+.social_links a {
+  margin: 20px;
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
+  padding: 7px 15px 15px 15px;
+  font-size: 25px;
+  border-radius: 50%;
+}
+
+.social_links a:hover {
+  color: white;
+  background-color: var(--primary-color);
+}
+
+.btn-branding {
+  background: var(--primary-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 12px 20px;
+  text-decoration: none;
+}
+
+@media (max-width: 960px) {
+  h1,
+  h2,
+  h1 {
+    font-size: 44px;
+  }
+
+  .contact-box {
+    display: block;
+    text-align: center;
+    width: 90%;
+  }
 }
