--- a/src/App.css
+++ b/src/App.css
@@ -5,26 +5,32 @@
   --default-font-family: "Poppins", sans-serif;
 }
 
+body {
+  background-color: var(--primary-color);
+}
+
 .App {
   text-align: center;
+  max-width: 976px;
+  margin: 0 auto;
 }
 
 h1 {
   color: black;
   font-family: var(--heading-font-family);
   font-weight: bold;
-  font-size: 78px;
+  font-size: 5vw;
   line-height: 1.8;
 }
 
 h2 {
-  font-size: 46px;
+  font-size: 3vw;
   font-family: var(--heading-font-family);
   font-weight: bold;
 }
 
 h3 {
-  font-size: 40px;
+  font-size: 3vw;
   font-family: var(--heading-font-family);
   font-weight: bold;
   margin-bottom: 43px;
@@ -37,19 +43,18 @@ p {
   line-height: 30px;
 }
 
-.App-header {
-  background-color: var(--primary-color);
+.row {
+  justify-content: center;
 }
 
 .container {
-  width: 976px;
   padding: 20px;
-  margin: 20px auto;
+  margin: 20px auto !important;
   background-color: white;
 }
 
-img {
-  width: 95%;
+.head {
+  padding: 15px;
 }
 
 .title {
@@ -74,9 +79,9 @@ footer p {
   margin: 20px;
   color: var(--primary-color);
   background-color: var(--secondary-color);
-  padding: 7px 15px 15px 15px;
   font-size: 25px;
-  border-radius: 50%;
+  border-radius: 15%;
+  padding: 0 0 7px 0;
 }
 
 .social_links a:hover {
@@ -94,16 +99,14 @@ footer p {
   text-decoration: none;
 }
 
-@media (max-width: 960px) {
-  h1,
-  h2,
-  h1 {
-    font-size: 44px;
-  }
+.slider {
+  display: grid;
+  justify-content: space-evenly;
+  grid-template-columns: 1fr 1fr;
+}
 
-  .contact-box {
-    display: block;
-    text-align: center;
-    width: 90%;
+@media (max-width: 540px) {
+  p {
+    margin-top: 10px;
   }
 }
