--- a/src/App.css
+++ b/src/App.css
@@ -24,26 +24,34 @@ h1 {
 }
 
 h2 {
-  font-size: 3vw;
-  font-family: var(--heading-font-family);
+  font-size: 36px;
+  font-family: var(--default-font-family);
   font-weight: bold;
 }
 
 h3 {
-  font-size: 3vw;
-  font-family: var(--heading-font-family);
+  font-size: 42px;
+  font-family: var(--default-font-family);
   font-weight: bold;
-  margin-bottom: 43px;
+  margin: 40px 0;
+}
+
+h4 {
+  font-size: 3vw;
+  font-family: var(--default-font-family);
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 
 p {
   margin-top: 10px;
   font-weight: normal;
-  font-size: 29px;
+  font-size: 20px;
+  padding-left: 20px;
 }
 
 .row {
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .content {
@@ -55,7 +63,7 @@ p {
 }
 
 .head {
-  padding-left: 15px;
+  margin-bottom: 10px;
 }
 
 .my_photo {
@@ -71,8 +79,6 @@ p {
 .title {
   padding: 10px;
   background-color: var(--primary-color);
-  border-radius: 10px;
-  margin: 15px;
   color: white;
   text-shadow: 3px 1px 8px;
   font-weight: 700;
@@ -85,7 +91,8 @@ p {
 }
 
 .skills,
-.right_part {
+.right_part,
+.main_block {
   text-align: left;
   padding-left: 20px;
 }
@@ -123,15 +130,26 @@ footer a,
   color: white;
   background-color: var(--primary-color);
 }
-
-.btn-branding {
+.project {
+  text-align: center;
+  margin-bottom: 10px;
+}
+.project a {
   background: var(--primary-color);
   border-radius: 4px;
   color: white;
   font-size: 18px;
-  line-height: 27px;
-  padding: 12px 20px;
+  line-height: 43px;
+  padding: 6px 10px;
   text-decoration: none;
+  transition: all 400ms ease-in;
+}
+
+.project a:hover {
+  background: white;
+  border-radius: 4px;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
 }
 
 .slider {
@@ -143,15 +161,34 @@ footer a,
 .main_block {
   color: rgb(71, 71, 71);
   background-color: var(--secondary-color);
+  padding: 0 !important;
 }
 
-.right_part p {
-  font-size: 18px;
+.right_part p,
+.main_block li {
+  font-size: 16px;
   text-align: left;
 }
 
-@media (max-width: 540px) {
-  p {
-    margin-top: 10px;
+@media screen and (max-width: 780px) {
+  h2 {
+    font-size: 24px;
+  }
+  h3 {
+    font-size: 36px;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  h1 {
+    line-height: 1;
+    padding-bottom: 10px;
+    font-size: 6vw;
+  }
+  h2 {
+    font-size: 17px;
+  }
+  h3 {
+    font-size: 24px;
   }
 }
