--- a/src/App.css
+++ b/src/App.css
@@ -50,8 +50,12 @@ p {
   padding-left: 20px;
 }
 
+ul {
+  list-style-position: inside;
+}
+
 .row {
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 .content {
@@ -184,7 +188,6 @@ footer a,
     padding-bottom: 0;
     font-size: 6vw;
   }
-
   h2 {
     font-size: 17px;
   }
@@ -198,6 +201,17 @@ footer a,
   .project a {
     font-size: 16px;
   }
+  .social_links a {
+    margin: 15px;
+  }
+  .right_part {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  .title {
+    padding-left: 20px;
+  }
 }
 
 @media screen and (max-width: 400px) {
@@ -206,11 +220,15 @@ footer a,
   }
   h3 {
     font-size: 20px;
+    margin: 15px 0;
   }
   .project a {
     font-size: 12px;
   }
   .content {
-    padding: 0;
+    padding: 20px 0;
+  }
+  .slider {
+    padding-left: 10px;
   }
 }
