--- a/src/App.css
+++ b/src/App.css
@@ -43,11 +43,12 @@ h4 {
   margin-bottom: 10px;
 }
 
-p {
-  margin-top: 10px;
-  font-weight: normal;
-  font-size: 20px;
+p,
+li {
+  font-size: 16px;
+  text-align: left;
   padding-left: 20px;
+  margin-bottom: 2px;
 }
 
 ul {
@@ -103,9 +104,6 @@ ul {
 footer {
   text-align: center;
   margin: 60px 0 30px;
-}
-footer p {
-  font-size: 16px;
 }
 
 footer a,
@@ -165,12 +163,6 @@ footer a,
   color: rgb(71, 71, 71);
   background-color: var(--secondary-color);
   padding: 0 !important;
-}
-
-.right_part p,
-.main_block li {
-  font-size: 16px;
-  text-align: left;
 }
 
 @media screen and (max-width: 780px) {
